# fashion-personalization-platform

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api-data-model.md  architecture.md
docs/adr/: 001-dependency-free-core-and-optional-fastapi.md  002-event-batch-personalization-boundary.md  README.md
docs/runbooks/: local-demo.md  production-hardening-checklist.md
scripts/: generate_portfolio_evidence.py  run_portfolio_audit.py
src/fashion_personalization/: __init__.py  api.py  batch.py  catalog.py  cli.py  events.py  models.py  recommendation.py  service.py  store.py
src/fashion_personalization/data/: __init__.py  catalog.json
tests/: test_api_adapter.py  test_batch_workflow.py  test_catalog.py  test_cli_audit.py  test_event_processing.py  test_portfolio_evidence.py  test_recommendation_engine.py
